# nightly

./: Cargo.toml  README.md  toolkit.nu
.github/workflows/: nightly-alpine.yaml  nightly-build.yml  pre-release.yml  release-msi.nu  release-msi.yml  release-nu-alpine.yaml  release-nu-debian.yaml  release-nu-image.yaml  release-pkg.nu  release-test.yml  release.yml
crates/nu-cli/: Cargo.toml
crates/nu-cli/src/: eval_file.rs  repl.rs  util.rs
crates/nu-cli/src/completions/: custom_completions.rs
crates/nu-cmd-base/: Cargo.toml
crates/nu-cmd-extra/: Cargo.toml
crates/nu-cmd-lang/: Cargo.toml
crates/nu-cmd-plugin/: Cargo.toml
crates/nu-color-config/: Cargo.toml
crates/nu-command/: Cargo.toml
crates/nu-command/src/: default_context.rs
crates/nu-command/src/filesystem/: rm.rs  save.rs  watch.rs
crates/nu-command/src/filters/: group_by.rs  sort.rs  tee.rs  uniq_by.rs
crates/nu-command/src/network/http/: client.rs
crates/nu-command/src/platform/input/: list.rs
crates/nu-command/tests/commands/: help.rs  mod.rs
crates/nu-command/tests/commands/network/http/: get.rs
crates/nu-derive-value/: Cargo.toml
crates/nu-engine/: Cargo.toml
crates/nu-experimental/: Cargo.toml
crates/nu-experimental/src/: lib.rs
crates/nu-explore/: Cargo.toml
crates/nu-glob/: Cargo.toml
crates/nu-json/: Cargo.toml
crates/nu-lsp/: Cargo.toml
crates/nu-mcp/: Cargo.toml
crates/nu-mcp/src/: evaluation.rs  server.rs
crates/nu-parser/: Cargo.toml
crates/nu-parser/src/: deparse.rs  parse_keywords.rs  parser.rs
crates/nu-path/: Cargo.toml
crates/nu-plugin/: Cargo.toml
crates/nu-plugin-core/: Cargo.toml
crates/nu-plugin-engine/: Cargo.toml
crates/nu-plugin-protocol/: Cargo.toml
crates/nu-plugin-test-support/: Cargo.toml
crates/nu-plugin-test-support/src/: plugin_test.rs
crates/nu-pretty-hex/: Cargo.toml
crates/nu-protocol/: Cargo.toml
crates/nu-protocol/src/engine/: engine_state.rs
crates/nu-protocol/src/pipeline/: pipeline_data.rs
crates/nu-std/: Cargo.toml
crates/nu-system/: Cargo.toml
crates/nu-table/: Cargo.toml
crates/nu-term-grid/: Cargo.toml
crates/nu-test-support/: Cargo.toml
crates/nu-test-support-macros/: Cargo.toml
crates/nu-utils/: Cargo.toml
crates/nu-utils/src/default_files/: doc_config.nu
crates/nu_plugin_custom_values/: Cargo.toml
crates/nu_plugin_example/: Cargo.toml
crates/nu_plugin_formats/: Cargo.toml
crates/nu_plugin_gstat/: Cargo.toml
crates/nu_plugin_inc/: Cargo.toml
crates/nu_plugin_polars/: Cargo.toml
crates/nu_plugin_query/: Cargo.toml
crates/nu_plugin_stress_internals/: Cargo.toml
crates/nuon/: Cargo.toml
src/: command.rs
tests/repl/: test_parser.rs
wix/: MSI.md  main.wixproj  main.wxs
