[package]
authors = ["The Nushell Project Developers"]
description = "CLI-related functionality for Nushell"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-cli"
edition = "2024"
license = "MIT"
name = "nu-cli"
version = "0.108.1-nightly.6"

[lib]
bench = false

[dev-dependencies]
nu-cmd-lang = { path = "../nu-cmd-lang", version = "0.108.1-nightly.6" }
nu-command = { path = "../nu-command", version = "0.108.1-nightly.6" }
nu-std = { path = "../nu-std", version = "0.108.1-nightly.6" }
nu-test-support = { path = "../nu-test-support", version = "0.108.1-nightly.6" }
rstest = { workspace = true, default-features = false }
tempfile = { workspace = true }

[dependencies]
nu-cmd-base = { path = "../nu-cmd-base", version = "0.108.1-nightly.6" }
nu-engine = { path = "../nu-engine", version = "0.108.1-nightly.6", features = ["os"] }
nu-glob = { path = "../nu-glob", version = "0.108.1-nightly.6" }
nu-path = { path = "../nu-path", version = "0.108.1-nightly.6" }
nu-parser = { path = "../nu-parser", version = "0.108.1-nightly.6" }
nu-plugin-engine = { path = "../nu-plugin-engine", version = "0.108.1-nightly.6", optional = true }
nu-protocol = { path = "../nu-protocol", version = "0.108.1-nightly.6", features = ["os"] }
nu-utils = { path = "../nu-utils", version = "0.108.1-nightly.6" }
nu-color-config = { path = "../nu-color-config", version = "0.108.1-nightly.6" }
nu-experimental = { path = "../nu-experimental", version = "0.108.1-nightly.6" }
nu-ansi-term = { workspace = true }
reedline = { workspace = true, features = ["bashisms"] }

chrono = { default-features = false, features = ["std"], workspace = true }
crossterm = { workspace = true }
fancy-regex = { workspace = true }
is_executable = { workspace = true }
log = { workspace = true }
lscolors = { workspace = true, default-features = false, features = ["nu-ansi-term"] }
miette = { workspace = true, features = ["fancy-no-backtrace"] }
nucleo-matcher = { workspace = true }
percent-encoding = { workspace = true }
sysinfo = { workspace = true }
strum = { workspace = true }
unicode-segmentation = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
which = { workspace = true }

[features]
plugin = ["nu-plugin-engine"]
system-clipboard = ["reedline/system_clipboard"]
sqlite = ["reedline/sqlite", "nu-protocol/sqlite"]

[lints]
workspace = true
