[package]
authors = ["The Nushell Project Developers"]
description = "Commands for managing Nushell plugins."
edition = "2024"
license = "MIT"
name = "nu-cmd-plugin"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-cmd-plugin"
version = "0.109.2-nightly.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
nu-engine = { path = "../nu-engine", version = "0.109.2-nightly.4" }
nu-path = { path = "../nu-path", version = "0.109.2-nightly.4" }
nu-protocol = { path = "../nu-protocol", version = "0.109.2-nightly.4", features = ["plugin"] }
nu-plugin-engine = { path = "../nu-plugin-engine", version = "0.109.2-nightly.4" }

itertools = { workspace = true }

[dev-dependencies]
