[package]
authors = ["The Nushell Project Developers"]
description = "Nushell table pager"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-explore"
edition = "2021"
license = "MIT"
name = "nu-explore"
version = "0.103.1-nightly.6"

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-protocol = { path = "../nu-protocol", version = "0.103.1-nightly.6" }
nu-parser = { path = "../nu-parser", version = "0.103.1-nightly.6" }
nu-path = { path = "../nu-path", version = "0.103.1-nightly.6" }
nu-color-config = { path = "../nu-color-config", version = "0.103.1-nightly.6" }
nu-engine = { path = "../nu-engine", version = "0.103.1-nightly.6" }
nu-table = { path = "../nu-table", version = "0.103.1-nightly.6" }
nu-json = { path = "../nu-json", version = "0.103.1-nightly.6" }
nu-utils = { path = "../nu-utils", version = "0.103.1-nightly.6" }
nu-ansi-term = { workspace = true }
nu-pretty-hex = { path = "../nu-pretty-hex", version = "0.103.1-nightly.6" }

anyhow = { workspace = true }
log = { workspace = true }
strip-ansi-escapes = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
ansi-str = { workspace = true }
unicode-width = { workspace = true }
lscolors = { workspace = true, default-features = false, features = [
  "nu-ansi-term",
] }