[package]
authors = ["The Nushell Project Developers"]
description = "Nushell's integrated LSP server"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-lsp"
name = "nu-lsp"
version = "0.104.1-nightly.15"
edition = "2024"
license = "MIT"

[dependencies]
nu-cli = { path = "../nu-cli", version = "0.104.1-nightly.15" }
nu-glob = { path = "../nu-glob", version = "0.104.1-nightly.15" }
nu-parser = { path = "../nu-parser", version = "0.104.1-nightly.15" }
nu-protocol = { path = "../nu-protocol", version = "0.104.1-nightly.15" }
nu-utils = { path = "../nu-utils", version = "0.104.1-nightly.15" }

crossbeam-channel = { workspace = true }
lsp-server = { workspace = true }
lsp-textdocument = { workspace = true }
lsp-types = { workspace = true }
memchr = { workspace = true }
miette = { workspace = true }
nucleo-matcher = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
nu-cmd-lang = { path = "../nu-cmd-lang", version = "0.104.1-nightly.15" }
nu-command = { path = "../nu-command", version = "0.104.1-nightly.15" }
nu-engine = { path = "../nu-engine", version = "0.104.1-nightly.15" }
nu-std = { path = "../nu-std", version = "0.104.1-nightly.15" }
nu-test-support = { path = "../nu-test-support", version = "0.104.1-nightly.15" }

assert-json-diff = "2.0"

[lints]
workspace = true
