[package]
authors = ["The Nushell Project Developers"]
description = "Nushell grid printing"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-term-grid"
edition = "2021"
license = "MIT"
name = "nu-term-grid"
version = "0.102.1-nightly.6"

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-utils = { path = "../nu-utils", version = "0.102.1-nightly.6", default-features = false }

unicode-width = { workspace = true }