[package]
authors = ["The Nushell Project Developers"]
description = "A version incrementer plugin for Nushell"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu_plugin_example"
edition = "2021"
license = "MIT"
name = "nu_plugin_example"
version = "0.104.1-nightly.8"

[[bin]]
name = "nu_plugin_example"
bench = false

[lib]
bench = false

[dependencies]
nu-plugin = { path = "../nu-plugin", version = "0.104.1-nightly.8" }
nu-protocol = { path = "../nu-protocol", version = "0.104.1-nightly.8", features = ["plugin"] }

[dev-dependencies]
nu-plugin-test-support = { path = "../nu-plugin-test-support", version = "0.104.1-nightly.8" }
nu-cmd-lang = { path = "../nu-cmd-lang", version = "0.104.1-nightly.8" }